--- a/public/css/my.css
+++ b/public/css/my.css
@@ -347,7 +347,8 @@ nav {
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    /* grid-template-columns: repeat(auto-fill, minmax(350px, 1fr)); */
+    grid-template-columns: repeat(2, 1fr);
     /* grid-template-columns: 1fr 1fr; */
     gap: 30px;
 }
